[package]
name = "raytracer_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.21.3"
rand = "0.8.5"
rayon = "1.5.3"
indicatif = {version="0.17.0", features = ["rayon"]}
term-table = "1.3.2"
